<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmartMonitor</string>
    <string name="menu_settings">Settings</string>
    <string name="main_connect">Connect</string>
    <string name="main_disconnect">Disconnect</string>
   
    <string name="main_stopSampling">Stop Sampling</string>
    <string name="main_exportToFile">Export To File</string>
    <string name="main_deleteDatabase">Delete database</string>
    <string name="main_connectAsMaster">Connect as Master</string>
    <string name="main_connectAt">Connect At</string>
    <string name="main_connectMaster">Connect as master</string>
    <string name="main_connectPeer">Connect as peer</string>
    
    
    <string name="plottingBtnTxt">Plot</string>
    
    <string name="master_masterActivityHdr">Master Node Controls</string>
    <string name="master_SamplingText">Start Sampling</string>
    <string name="master_computeModalFreqs">Compute Modal Frequencies</string>
    
    <string name="peer_peerActivityHdr">Peer Node Controls</string>
    <string name="peer_connect_at">Connect At</string>
    <string name="peer_connect">Connect</string>

    <string name="plot_plotActivityHdr">Plots</string>
    
    <string name="exportToFileBtnTxt">Export to file</string>
    <string name="deleteDbBtnTxt">Delete Database</string>
    <string name="connect_at_ip">192.168.63.97</string>
    
</resources>