<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/buttonMaster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button2"
        android:layout_alignRight="@+id/button1"
        android:text="@string/main_connectMaster"
        android:onClick="connectAt" />
    
    <Button
        android:id="@+id/buttonPeer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button2"
        android:layout_alignRight="@+id/button1"
        android:text="@string/main_connectPeer"
        android:onClick="connectAt" />
    
    
    <Button
        android:id="@+id/stopSampling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/startSampling"
        android:layout_below="@+id/startSampling"
        android:layout_marginTop="28dp"
        android:onClick="stopSampling"
        android:text="@string/main_stopSampling" />

    <Button
        android:id="@+id/exportToFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="78dp"
        android:onClick="exportToFile"
        android:text="@string/main_exportToFile" />

    <Button
        android:id="@+id/connectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/plotGraphs"
        android:layout_below="@+id/plotGraphs"
        android:layout_marginTop="25dp"
        android:onClick="connect"
        android:text="@string/main_connect" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/connectButton"
        android:layout_below="@+id/connectButton"
        android:onClick="disconnect"
        android:text="@string/main_disconnect"/>

    <Button
        android:id="@+id/startSampling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/connectButton"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/button1"
        android:onClick="startSampling"
        android:text="@string/master_SamplingText" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/exportToFile"
        android:layout_marginTop="40dp"
        android:layout_toRightOf="@+id/button1"
		android:onClick="deleteDatabase"
        android:text="@string/main_deleteDatabase" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_toLeftOf="@+id/stopSampling"
        android:onClick="connectAsMaster"
        android:text="@string/main_connectAsMaster" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button2"
        android:layout_alignRight="@+id/button1"
        android:text="@string/main_connectAt"
        android:onClick="connectAt" />

    <EditText
        android:id="@+id/ipText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button4"
        android:layout_alignLeft="@+id/button4"
        android:ems="10"
        android:text="192.168.1." >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/Button01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:onClick="connectAt"
        android:text="@string/main_connectAt" />
		
        />

</RelativeLayout>