<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="100dp"
    android:orientation="vertical" 
    android:background="@drawable/background" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/peer_peerActivityHdr"
        android:textAppearance="?android:attr/textAppearanceLarge"
        style="@style/ButtonLargeText" />

    <Button
        android:id="@+id/samplingBtn"
        style="@style/ButtonSmallText"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
		android:layout_marginRight="300dp"
        android:background="@drawable/orange_menu_btn"
        android:onClick="connectAt"
        android:text="@string/peer_connect_at" />

    <Button
        android:id="@+id/computeModalFreqsBtn"
        style="@style/ButtonSmallText"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:background="@drawable/orange_menu_btn"
        android:onClick="connect"
        android:text="@string/peer_connect" />
    
</LinearLayout>